--- a/main.html
+++ b/main.html
@@ -34,10 +34,12 @@
                 </div>
             </li>
             <li>
-                <button class="menuButton">Menu
-                    <svg viewBox="0 0 30 30" width="16px" height="16px">
-                        <path d="M15.09 25.51a1 1 0 01-.71-.3l-8.57-8.57 1.41-1.41 7.87 7.86L23 15.23l1.41 1.41-8.57 8.57a1 1 0 01-.75.3zM15.09 15.08a1 1 0 01-.71-.3L5.81 6.21 7.22 4.8l7.87 7.86L23 4.8l1.41 1.41-8.57 8.57a1 1 0 01-.75.3z"></path>
-                    </svg>
+                <button class="menuButton">
+                    <span>Menu
+                        <svg viewBox="0 0 30 30" width="16px" height="16px">
+                            <path d="M15.09 25.51a1 1 0 01-.71-.3l-8.57-8.57 1.41-1.41 7.87 7.86L23 15.23l1.41 1.41-8.57 8.57a1 1 0 01-.75.3zM15.09 15.08a1 1 0 01-.71-.3L5.81 6.21 7.22 4.8l7.87 7.86L23 4.8l1.41 1.41-8.57 8.57a1 1 0 01-.75.3z"></path>
+                        </svg>
+                    </span>
                 </button>
             </li>
         </ul>
